Fix theta in equations

--- a/ex2/src/ex2.ipynb
+++ b/ex2/src/ex2.ipynb
@@ -57,18 +57,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "size(X_data) = (100, 2)\n",
-      "size(y_data) = (100,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using Plots\n",
     "using Optim\n",
@@ -846,12 +837,12 @@
     "### 1.2.1) Warmup exercise: sigmoid function\n",
     "Before you start with the actual cost function, recall that the logistic regression hypothesis is defined as:\n",
     "\n",
-    "$$h_θ(x) = g(θ^Tx).$$\n",
+    "$$h_\\theta(x) = g(\\theta^Tx).$$\n",
     "\n",
     "where function $g$ is the sigmoid function. The sigmoid function is defined as:\n",
     "\n",
     "\n",
-    "$$g(z) = \\frac{1}{1+e^{−z}}$$\n",
+    "$$g(z) = \\frac{1}{1+e^{-z}}$$\n",
     "\n",
     "\n",
     "Your first step is to implement this function as *sigmoid()* so it can be\n",
@@ -874,17 +865,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sigmoid(-10) = 4.5397868702434395e-5\n",
-      "sigmoid(0) = 0.5\n",
-      "sigmoid(100) = 1.0\n",
-      "sigmoid(-3:3) = [0.0474259, 0.119203, 0.268941, 0.5, 0.731059, 0.880797, 0.952574]\n"
+     "ename": "LoadError",
+     "evalue": "\u001b[91mUndefVarError: sigmoid not defined\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mUndefVarError: sigmoid not defined\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:515\u001b[22m\u001b[22m"
      ]
     }
    ],
@@ -925,15 +917,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cost = [0.0, 0.0, 0.0]\n",
-      "grad = [0.0, 0.0, 0.0]\n"
+     "ename": "LoadError",
+     "evalue": "\u001b[91mUndefVarError: X_data not defined\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mUndefVarError: X_data not defined\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:515\u001b[22m\u001b[22m"
      ]
     }
    ],
@@ -1653,7 +1648,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "predict_proba(X, theta) = sigmoid(X * theta)\n",
@@ -1690,7 +1687,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "@benchmark optimize(cost_function, gradient!, initial_theta, BFGS())"
@@ -1699,7 +1698,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "@benchmark optimize(cost_function, initial_theta, LBFGS())"
