Finish linreg with one variable

--- a/ex1/src/ex1_multi.ipynb
+++ b/ex1/src/ex1_multi.ipynb
@@ -7,31 +7,58 @@
     "  Machine Learning Online Class\n",
     "  Exercise 1: Linear regression with multiple variables\n",
     "\n",
-    "# Instructions\n",
+    "# Optional Exercises\n",
+    "If you have successfully completed the previous notebook, congratulations! You\n",
+    "now understand linear regression and should able to start using it on your\n",
+    "own datasets.\n",
+    "For the rest of this programming exercise, we have included the following\n",
+    "optional exercises. These exercises will help you gain a deeper understanding\n",
+    "of the material, and if you are able to do so, we encourage you to complete\n",
+    "them as well."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Linear Regression with Multiple Variables\n",
     "\n",
-    " \n",
-    "  This file contains code that helps you get started on the\n",
-    "  linear regression exercise. \n",
+    "In this part, you will implement linear regression with multiple variables to\n",
+    "predict the prices of houses. Suppose you are selling your house and you\n",
+    "want to know what a good market price would be. One way to do this is to\n",
+    "first collect information on recent houses sold and make a model of housing\n",
+    "prices.\n",
+    "The file `data/ex1data2.txt` contains a training set of housing prices in Portland, Oregon. The first column is the size of the house (in square feet), the\n",
+    "second column is the number of bedrooms, and the third column is the price\n",
+    "of the house.\n",
+    "This notebook has been set up to help you step through this exercise.\n",
     "\n",
-    "  You will need to complete the following functions in this \n",
-    "  exericse:\n",
     "\n",
-    "     feature_normalize()\n",
-    "     compute_cost_multi()\n",
-    "     gradient_descent_multi!()\n",
-    "     normal_eqn()\n",
+    "## Feature Normalization\n",
+    "We will start by loading and displaying some values from this dataset. By looking at the values, note that house sizes are about 1000 times the number of bedrooms. When features differ by orders of magnitude, first performing feature scaling can make gradient descent converge much more quickly.\n",
+    "Your task here is to complete the code in `feature_normalize()` to\n",
+    "- Subtract the mean value of each feature from the dataset.\n",
+    "- After subtracting the mean, additionally scale (divide) the feature values by their respective “standard deviations.”\n",
     "\n",
-    "  For this part of the exercise, you will need to change some\n",
-    "  parts of the code below for various experiments (e.g., changing\n",
-    "  learning rates).\n"
+    "The standard deviation is a way of measuring how much variation there is\n",
+    "in the range of values of a particular feature (most data points will lie within\n",
+    "±2 standard deviations of the mean); this is an alternative to taking the range\n",
+    "of values (max-min). You can use the `std()` function to compute the standard deviation. For example, inside `feature_normalize()`,\n",
+    "the quantity `X[:,1]` contains all the values of `x1` (house sizes) in the training\n",
+    "set, so `std(X[:,1])` computes the standard deviation of the house sizes.\n",
+    "At the time that featureNormalize.m is called, the extra column of 1’s\n",
+    "corresponding to `x0 = 1` has not yet been added to `X` (see ex1 multi.m for\n",
+    "details).\n",
+    "You will do this for all the features and your code should work with\n",
+    "datasets of all sizes (any number of features / examples). Note that each\n",
+    "column of the matrix X corresponds to one feature.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -59,9 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -175,9 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -222,9 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "x_norm, mu, sigma = feature_normalize(x)\n",
@@ -246,9 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -272,9 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -302,9 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -343,9 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -388,15 +401,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.5.0",
+   "display_name": "Julia 0.6.0",
    "language": "julia",
-   "name": "julia-0.5"
+   "name": "julia-0.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.5.0"
+   "version": "0.6.0"
   }
  },
  "nbformat": 4,
